--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -107,7 +107,7 @@
                 </widget>
                </item>
                <item row="2" column="1" colspan="2">
-                <widget class="QLineEdit" name="lineEdit_2"/>
+                <widget class="QLineEdit" name="le_password"/>
                </item>
                <item row="3" column="2">
                 <widget class="QPushButton" name="pb_login">
@@ -129,7 +129,7 @@
                 </widget>
                </item>
                <item row="1" column="1" colspan="2">
-                <widget class="QLineEdit" name="lineEdit"/>
+                <widget class="QLineEdit" name="le_username"/>
                </item>
                <item row="2" column="0">
                 <widget class="QLabel" name="label_2">
