--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -42,7 +42,7 @@
        <string notr="true">background-color: rgb(85, 87, 83);</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="page">
        <layout class="QGridLayout" name="gridLayout_6">
@@ -52,7 +52,7 @@
            <string notr="true">background-color: rgb(117, 80, 123);</string>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="page_3">
            <layout class="QGridLayout" name="gridLayout_7">
@@ -524,8 +524,64 @@ font-size: 20px;</string>
                 <string>Course Available</string>
                </attribute>
                <layout class="QGridLayout" name="gridLayout_11">
+                <item row="1" column="0">
+                 <widget class="CustomTable" name="tableWidget_Crs_Avail">
+                  <attribute name="horizontalHeaderCascadingSectionResizes">
+                   <bool>true</bool>
+                  </attribute>
+                  <attribute name="horizontalHeaderStretchLastSection">
+                   <bool>true</bool>
+                  </attribute>
+                  <attribute name="verticalHeaderCascadingSectionResizes">
+                   <bool>false</bool>
+                  </attribute>
+                  <attribute name="verticalHeaderStretchLastSection">
+                   <bool>false</bool>
+                  </attribute>
+                  <column>
+                   <property name="text">
+                    <string>           ID          </string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Course Name</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Department</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Professor name</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Prerequisite</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Description</string>
+                   </property>
+                  </column>
+                 </widget>
+                </item>
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_Crs_Avail"/>
+                 <widget class="QPushButton" name="pb_enrolled">
+                  <property name="maximumSize">
+                   <size>
+                    <width>100</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>Enrolled</string>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </widget>
@@ -811,6 +867,13 @@ background-color: rgb(52, 101, 164);
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>CustomTable</class>
+   <extends>QTableWidget</extends>
+   <header location="global">customtable.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
