--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -517,7 +517,7 @@ font-size: 20px;</string>
             <item row="0" column="0">
              <widget class="QTabWidget" name="tabWidget_Courses">
               <property name="currentIndex">
-               <number>0</number>
+               <number>1</number>
               </property>
               <widget class="QWidget" name="tab">
                <attribute name="title">
@@ -526,6 +526,12 @@ font-size: 20px;</string>
                <layout class="QGridLayout" name="gridLayout_11">
                 <item row="1" column="0">
                  <widget class="CustomTable" name="tableWidget_Crs_Avail">
+                  <property name="styleSheet">
+                   <string notr="true">CustoTable:item:checked {
+	background-color: rgb(237, 212, 0);
+
+}</string>
+                  </property>
                   <attribute name="horizontalHeaderCascadingSectionResizes">
                    <bool>true</bool>
                   </attribute>
@@ -590,8 +596,55 @@ font-size: 20px;</string>
                 <string>My Courses</string>
                </attribute>
                <layout class="QGridLayout" name="gridLayout_10">
+                <item row="1" column="0">
+                 <widget class="CustomTable" name="tableWidget_MyCrs">
+                  <attribute name="horizontalHeaderStretchLastSection">
+                   <bool>true</bool>
+                  </attribute>
+                  <column>
+                   <property name="text">
+                    <string>ID</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Course Name</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Department</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Professor Name</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Prerequisite</string>
+                   </property>
+                  </column>
+                  <column>
+                   <property name="text">
+                    <string>Description</string>
+                   </property>
+                  </column>
+                 </widget>
+                </item>
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_MyCrs"/>
+                 <widget class="QPushButton" name="pb_completed">
+                  <property name="maximumSize">
+                   <size>
+                    <width>100</width>
+                    <height>50</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>Completed</string>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </widget>
