--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -52,7 +52,7 @@
            <string notr="true">background-color: rgb(117, 80, 123);</string>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="page_3">
            <layout class="QGridLayout" name="gridLayout_7">
@@ -177,11 +177,14 @@ QLabel {
                    <height>85</height>
                   </size>
                  </property>
+                 <property name="styleSheet">
+                  <string notr="true">border-image: url(:/images/userlogin.png);</string>
+                 </property>
                  <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                  <enum>QFrame::NoFrame</enum>
                  </property>
                  <property name="frameShadow">
-                  <enum>QFrame::Raised</enum>
+                  <enum>QFrame::Plain</enum>
                  </property>
                 </widget>
                </item>
@@ -516,6 +519,17 @@ font-size: 20px;</string>
            <layout class="QGridLayout" name="gridLayout_9">
             <item row="0" column="0">
              <widget class="QTabWidget" name="tabWidget_Courses">
+              <property name="styleSheet">
+               <string notr="true">QPushButton{
+font: 75 12pt &quot;Noto Sans&quot;;
+background-color: rgb(52, 101, 164);
+	color: rgb(255, 255, 255);
+}
+
+QLabel {
+ 	color: rgb(255, 255, 255);
+}</string>
+              </property>
               <property name="currentIndex">
                <number>1</number>
               </property>
@@ -910,6 +924,12 @@ background-color: rgb(52, 101, 164);
    </property>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::AllToolBarAreas</set>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
